--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
@@ -22,10 +23,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.32.1",
-    "ejs-mate": "^3.0.0"
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.1"
   }
 }
